Tue Oct 28 07:52:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/wrapper_macros.GNU:
          Added GNU variable pipes. When this is not set, it defaults to 0.
          When it is 1, it results in adding -pipe to the CFLAGS.

        * include/makeinclude/platform_gnuwin32_common.GNU:
          Only set pipes to 1, the new code in wrapper_macros.GNU will add
          the needed compiler flag

        * include/makeinclude/platform_vxworks5.x_g++.GNU:
          When running the Tornado compiler on Win32 we can use pipes, so
          when pipes is not set, set it to 1. Also don't add the compiler
          flag anymore, this is done in wrapper_macros.GNU

Mon Oct 27 16:00:19 2003  Steve Huston  <shuston@riverace.com>

	* ACEXML/common/ZipCharStream.cpp: Silence HP aC++ warnings about
	  an empty translation unit.

Mon Oct 27 15:51:39 2003  Steve Huston  <shuston@riverace.com>

	* configure.ac:
	* m4/acinclude.m4: Remove \ from \-quoted double- and back-quote
	  characters to obey warnings from autoheader 2.57g. autoheader's
	  processing of these warnings was erroneous, causing it to fail.

Mon Oct 27 19:48:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:
          For reverseclean don't use the reverse_clean perl script but do
          a realclean in reverse order. This fixes the problem we have in the
          Sun Forte build where the list of arguments to the perl script is
          to long.

Mon Oct 27 11:17:03 2003  Gautam Thaker  <gthaker@atl.lmco.com>

        * SOCK_SEQPACK_clt.cpp:
          Fixed a previously made change that was using sizes for tests as
          n**2 rather than 2**n!
          SOCK_STREAM_clt.cpp:
          Fixed a previously made change that was using sizes for tests as
          n**2 rather than 2**n!

Sat Oct 25 10:51:23 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
